Position Filtering Added. All items are checked by default.

--- a/index.html
+++ b/index.html
@@ -51,104 +51,241 @@
             </div>
         </div>
         <div class="teamFilter">
-            <div class="filterSection-label">
-                Select Team:
+            <div class="teamFilter-section">
+                <div class="filterSection-label">
+                    Select Team:
+                </div>
+                <div class="inputs d-inline" id="team-names">
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>Alabama</span>
+                                <input type="checkbox" class="TeamName" name="Alabama" value="Alabama" checked>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>Arkansas</span>
+                                <input type="checkbox" class="TeamName" name="Arkansas" value="Arkansas" checked>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>Auburn</span>
+                                <input type="checkbox" class="TeamName" name="Auburn" value="Auburn" checked>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>Florida</span>
+                                <input type="checkbox" class="TeamName" name="Florida" value="Florida" checked>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>Georgia</span>
+                                <input type="checkbox" class="TeamName" name="Georgia" value="Georgia" checked>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>Kentucky</span>
+                                <input type="checkbox" class="TeamName" name="Kentucky" value="Kentucky" checked>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>LSU</span>
+                                <input type="checkbox" class="TeamName" name="LSU" value="LSU" checked>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>Mississippi St.</span>
+                                <input type="checkbox" class="TeamName" name="Mississippi State" value="Mississippi State" checked>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>Ole Miss</span>
+                                <input type="checkbox" class="TeamName" name="Mississippi" value="Mississippi" checked>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>South Carolina</span>
+                                <input type="checkbox" class="TeamName" name="South Carolina" value="South Carolina" checked>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>Tennessee</span>
+                                <input type="checkbox" class="TeamName" name="Tennessee" value="Tennessee" checked>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>Vanderbilt</span>
+                                <input type="checkbox" class="TeamName" name="Vanderbilt" value="Vanderbilt" checked>
+                            </label>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="inputs d-inline" id="team-names">
-                <div class="checkDiv">
-                    <div id="checkBtn">
-                        <label>
-                            <span>Alabama</span>
-                            <input type="checkbox" class="TeamName" name="Alabama" value="Alabama">
-                        </label>
-                    </div>
+            <div class="teamFilter-section">
+                <div class="filterSection-label">
+                    Select Position:
                 </div>
-                <div class="checkDiv">
-                    <div id="checkBtn">
-                        <label>
-                            <span>Arkansas</span>
-                            <input type="checkbox" class="TeamName" name="Arkansas" value="Arkansas">
-                        </label>
+                <div class="inputs d-inline" id="team-names">
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>C</span>
+                                <input type="checkbox" class="Position" name="C" value="C" checked>
+                            </label>
+                        </div>
                     </div>
-                </div>
-                <div class="checkDiv">
-                    <div id="checkBtn">
-                        <label>
-                            <span>Auburn</span>
-                            <input type="checkbox" class="TeamName" name="Auburn" value="Auburn">
-                        </label>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>OG</span>
+                                <input type="checkbox" class="Position" name="OG" value="OG" checked>
+                            </label>
+                        </div>
                     </div>
-                </div>
-                <div class="checkDiv">
-                    <div id="checkBtn">
-                        <label>
-                            <span>Florida</span>
-                            <input type="checkbox" class="TeamName" name="Florida" value="Florida">
-                        </label>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>OT</span>
+                                <input type="checkbox" class="Position" name="OT" value="OT" checked>
+                            </label>
+                        </div>
                     </div>
-                </div>
-                <div class="checkDiv">
-                    <div id="checkBtn">
-                        <label>
-                            <span>Georgia</span>
-                            <input type="checkbox" class="TeamName" name="Georgia" value="Georgia">
-                        </label>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>QB</span>
+                                <input type="checkbox" class="Position" name="QB" value="QB" checked>
+                            </label>
+                        </div>
                     </div>
-                </div>
-                <div class="checkDiv">
-                    <div id="checkBtn">
-                        <label>
-                            <span>Kentucky</span>
-                            <input type="checkbox" class="TeamName" name="Kentucky" value="Kentucky">
-                        </label>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>RB</span>
+                                <input type="checkbox" class="Position" name="RB" value="RB" checked>
+                            </label>
+                        </div>
                     </div>
-                </div>
-                <div class="checkDiv">
-                    <div id="checkBtn">
-                        <label>
-                            <span>LSU</span>
-                            <input type="checkbox" class="TeamName" name="LSU" value="LSU">
-                        </label>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>WR</span>
+                                <input type="checkbox" class="Position" name="WR" value="WR" checked>
+                            </label>
+                        </div>
                     </div>
-                </div>
-                <div class="checkDiv">
-                    <div id="checkBtn">
-                        <label>
-                            <span>Mississippi St.</span>
-                            <input type="checkbox" class="TeamName" name="Mississippi State" value="Mississippi State">
-                        </label>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>TE</span>
+                                <input type="checkbox" class="Position" name="TE" value="TE" checked>
+                            </label>
+                        </div>
                     </div>
-                </div>
-                <div class="checkDiv">
-                    <div id="checkBtn">
-                        <label>
-                            <span>Ole Miss</span>
-                            <input type="checkbox" class="TeamName" name="Mississippi" value="Mississippi">
-                        </label>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>DT</span>
+                                <input type="checkbox" class="Position" name="DT" value="DT" checked>
+                            </label>
+                        </div>
                     </div>
-                </div>
-                <div class="checkDiv">
-                    <div id="checkBtn">
-                        <label>
-                            <span>South Carolina</span>
-                            <input type="checkbox" class="TeamName" name="South Carolina" value="South Carolina">
-                        </label>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>DB</span>
+                                <input type="checkbox" class="Position" name="DB" value="DB" checked>
+                            </label>
+                        </div>
                     </div>
-                </div>
-                <div class="checkDiv">
-                    <div id="checkBtn">
-                        <label>
-                            <span>Tennessee</span>
-                            <input type="checkbox" class="TeamName" name="Tennessee" value="Tennessee">
-                        </label>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>OLB</span>
+                                <input type="checkbox" class="Position" name="OLB" value="OLB" checked>
+                            </label>
+                        </div>
                     </div>
-                </div>
-                <div class="checkDiv">
-                    <div id="checkBtn">
-                        <label>
-                            <span>Vanderbilt</span>
-                            <input type="checkbox" class="TeamName" name="Vanderbilt" value="Vanderbilt">
-                        </label>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>MLB</span>
+                                <input type="checkbox" class="Position" name="MLB" value="MLB" checked>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>CB</span>
+                                <input type="checkbox" class="Position" name="CB" value="CB" checked>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>S</span>
+                                <input type="checkbox" class="Position" name="S" value="S" checked>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>P</span>
+                                <input type="checkbox" class="Position" name="P" value="P" checked>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>K</span>
+                                <input type="checkbox" class="Position" name="K" value="K" checked>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="checkDiv">
+                        <div id="checkBtn">
+                            <label>
+                                <span>LS</span>
+                                <input type="checkbox" class="Position" name="LS" value="LS" checked>
+                            </label>
+                        </div>
                     </div>
                 </div>
             </div>
